Updated '9-york-beach.html' via CloudCannon

--- a/9-york-beach.html
+++ b/9-york-beach.html
@@ -1,8 +1,8 @@
-<html>
-    <body>
-        <div class='editable'>
-            Here's my content
-        </div>
-        
-    </body>
-</html>
+---
+layout: page
+title: Home
+permalink: /
+---
+
+
+<div class='editable'><p>And here&#39;s my update.</p></div>
