Updated '9-york-beach.html' via CloudCannon

--- a/9-york-beach.html
+++ b/9-york-beach.html
@@ -5,4 +5,4 @@ permalink: /york-beach/
 ---
 
 
-<div class='editable'><p>And here&#39;s my update.</p></div>
+<div class='editable'><p>And here&#39;s my update. Go <a href="/">home</a>!</p></div>
